--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,8 +3,8 @@
     "builds":[
         {"src":"*.js","use":"@vercel/node"}
     ],
-    "routes":{
-        "src":"/(.*)",
-        "dest":"/"
-    }
+    "routes":[
+        {"src":"/(.*)",
+        "dest":"/"}
+    ]
 }
